<resources>
    <string name="app_name">"Josh's App"</string>
    <string name="login">"Login"</string>
    <string name="login_label">"Enter Name"</string>
    <string name="cities">"Cities"</string>
    <string name="parks">"Parks"</string>
    <string name="traffic">"Traffic"</string>
    <string name="music">"Music"</string>
    <string name="movies">"Movies"</string>
    <string name="map">"map"</string>
    <string name="button">"button"</string>
    <string name="hint">"Enter Name"</string>
    <string name="title_activity_movies_list">Movies_List_Activity</string>
    <string name="email">Email</string>
    <string name="password_entry">Password</string>



</resources>